--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "@stable",
-        "phpunit/dbunit": "@stable"
+        "brianium/paratest": "@stable"
     },
     "autoload": {
         "psr-0" : {
