add new Package Ginq@stable change Simplicity\Library\Http\Session\Cookie::map use Ginq::map complite Simplicity\Library\Http\Session\Cookie Tests

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
         "twig/twig":               "@stable",
         "symfony/yaml":            "@stable",
         "illuminate/http":         "@stable",
-        "illuminate/session":      "@stable"
+        "illuminate/session":      "@stable",
+        "ginq/ginq":               "@stable"
     },
     "require-dev": {
         "phpunit/phpunit":         "@stable",
